--- a/client.yaml
+++ b/client.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   realmSelector:
     matchLabels:
-      app: openshift
+      app: sso
   client:
     clientId: openshift
     secret: 78cf5cf0-91df-11ed-a1eb-0242ac120002
