Change namespace for client-secret

--- a/client-secret.yaml
+++ b/client-secret.yaml
@@ -3,5 +3,5 @@ data:
   clientSecret: NzhjZjVjZjAtOTFkZi0xMWVkLWExZWItMDI0MmFjMTIwMDAy
 kind: Secret
 metadata:
-  name: client-secret
-  namespace: sso
+  name: openid-client-secret
+  namespace: openshift-config
