--- a/client-secret.yaml
+++ b/client-secret.yaml
@@ -4,4 +4,6 @@ data:
 kind: Secret
 metadata:
   name: openid-client-secret
-  namespace: openshift-config
+  namespace: openshift-authentication
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
